<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/banner_container">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="1dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/welcome_msg"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/latest"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/latestL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:alpha="0.7"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_bank" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/latest_jobs"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/admitCard"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/result2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:alpha="0.8"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/admit2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/admit_card_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/results"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/result3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:alpha="0.8"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_baseline_analytics_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/result_title"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/answerKey"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/result4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:alpha="0.8"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/exam" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/answers_key"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/syllabus"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:id="@+id/result5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:alpha="0.8"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/gk" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/syllabus"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/top_trending"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jobCategoryRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/category_item" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="top"
        android:layout_marginTop="30dp"
        android:visibility="visible" />
</RelativeLayout>